feat: update opencore 0.9.3

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -623,6 +623,13 @@
 				<key># Ethernet</key>
 				<string></string>
 			</dict>
+			<key>PciRoot(0x0)/Pci(0x1B,0x0)</key>
+			<dict>
+				<key>layout-id</key>
+				<integer>12</integer>
+				<key># Audio</key>
+				<string></string>
+			</dict>
 		</dict>
 		<key>Delete</key>
 		<dict/>
@@ -747,7 +754,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 debug=0x100 agdpmod=pikera npci=0x2000 alcid=12</string>
+				<string>keepsyms=1 debug=0x100 agdpmod=pikera npci=0x2000</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
@@ -1008,6 +1015,8 @@
 		<dict>
 			<key>ClearScreenOnModeSwitch</key>
 			<false/>
+			<key>ConsoleFont</key>
+			<string></string>
 			<key>ConsoleMode</key>
 			<string></string>
 			<key>DirectGopRendering</key>
@@ -1076,6 +1085,8 @@
 			<key>HashServices</key>
 			<false/>
 			<key>OSInfo</key>
+			<false/>
+			<key>PciIo</key>
 			<false/>
 			<key>UnicodeCollation</key>
 			<false/>
